# Projekt-A

./: .gitignore  0.Global Projekt Definition.md  0.Schnittstellen.md  README.md
Dokumente/: 0.1 Ungefährer Ablauf.md  0.2 Recherche.md  1. Core-Details.md  2. Domain-Details.md  3. System-Details.md  AI-MCP-Interactions.md  AI-MCP-Widgets.md  Alternativbeschreibung (Claude).md  Alternative Rust-Ice.md  Alternative Rust-Slint.md  Begriffserklärung-Roadmap.md  Core-Layer.md  Core_definition.md  Direktiven.md  Fictional 2039 Concept.md  Gemini Deep Research.md  Git.md  HilfeGit.md  Implementierungsplanerstellung.md  Inspiration Opera.md  MCP-Integrate.md  MCP-Manjaro.md  MCP-Pflichtenheft.md  MCP-Spec.md  MCP-UI.md  Manus AI DE.md  Nova Directory.md  NovaImplement.md  NovaLayer.md  NovaMCP.md  NovaSchnittstellen-Implementierungsleitfaden.md  NovaTech.md  Nova_Planung.md  Product Description.md  Projektplan.md  ReadMe.md  Schnittstellenspezifikation.md  Spez.md  Spezifikations-Refaktoring.md  Systemdirektive.md  (+7 more)
Dokumente/.obsidian/: graph.json  templates.json  workspace.json
Dokumente/.trash/: Snippets für Prompts.md  SondaZeiche.md  Super Anweisung.md
VivoX/: CMakeLists.txt  InputManager.cpp  InputManager.h  README.md  VivoX.pro  VivoXSystem.cpp  VivoXSystem.h  main.cpp
VivoX/compositor/: CompositorInterface.h
VivoX/compositor/protocols/: LinuxDmabufProtocol.cpp  LinuxDmabufProtocol.h  PresentationTimeProtocol.cpp  PresentationTimeProtocol.h  ViewporterProtocol.cpp  ViewporterProtocol.h  WaylandLayerShell.cpp  WaylandLayerShell.h  WaylandProtocols.cpp  WaylandProtocols.h  XWaylandIntegration.cpp  XWaylandIntegration.h
VivoX/compositor/rendering/:  RenderShader.cpp  RenderEngine.cpp  RenderEngine.h  RenderEngineInterface.h  RenderShader.h  RenderSurface.cpp  RenderSurface.h  RenderTarget.cpp  RenderTarget.h  RenderTexture.cpp  RenderTexture.h
VivoX/compositor/wayland/: OutputManager.cpp  OutputManager.h  WaylandCompositor.cpp  WaylandCompositor.h
VivoX/compositor/xwayland/: XWaylandIntegration.cpp  XWaylandIntegration.h
VivoX/core/actions/: ActionExecutor.cpp  ActionExecutor.h  ActionInterface.cpp  ActionInterface.h  ActionManager.cpp  ActionManager.h  ActionRegistry.cpp  ActionRegistry.h  ActionSystem.qml  UndoableActionInterface.cpp  UndoableActionInterface.h
VivoX/core/configuration/: ConfigManager.cpp  ConfigManager.h  ConfigManagerInterface.h
VivoX/core/events/: EventManager.cpp  EventManager.h  EventManagerInterface.h
VivoX/core/logging/: Logger.cpp  Logger.h  README.md
VivoX/core/plugins/: PluginInterface.h  PluginLoader.cpp  PluginLoader.h
VivoX/core/services/: ServiceInterface.h  ServiceRegistry.cpp  ServiceRegistry.h
VivoX/core/testing/: TestRunner.h
VivoX/docs/: 1 Team - Core.md  2 Team Compositor.md  3 Team Workspaces.md  4 Team UI.md  5 Team Interaction.md  6 Team System Application.md  7 Team Builder.md  Aktions-Library.md  Auftrag.md  Logik-Library.md  UI Library.md  Wayland Desktop-Umgebung.md  Wayland Fenstermanager.md  Web-Seitenleiste.md
VivoX/input/: InputManager.cpp  InputManager.h  InputManagerInterface.h
VivoX/input/gestures/: GestureEngine.cpp  GestureEngine.h  GestureRecognizer.cpp  GestureRecognizer.h
VivoX/input/shortcuts/: ShortcutManager.cpp  ShortcutManager.h
VivoX/system/: SystemService.cpp  SystemService.h  SystemServiceInterface.h
VivoX/system/applications/: ApplicationManager.cpp  ApplicationManager.h
VivoX/system/media/: MediaController.cpp  MediaController.h
VivoX/system/network/: NetworkManager.cpp  NetworkManager.h  NetworkManagerInterface.h
VivoX/system/notifications/: NotificationManager.cpp  NotificationManager.h  NotificationManagerInterface.h
VivoX/system/power/: PowerManager.cpp  PowerManager.h
VivoX/system/session/: SessionManager.cpp  SessionManager.h
VivoX/tests/: CMakeLists.txt
VivoX/tests/integration/: CMakeLists.txt
VivoX/tests/integration/core/: CoreIntegrationTest.cpp
VivoX/tests/unit/: CMakeLists.txt
VivoX/tests/unit/core/: ActionManagerTest.cpp  ConfigManagerTest.cpp  EventManagerTest.cpp  LoggerTest.cpp  PluginLoaderTest.cpp  ServiceRegistryTest.cpp
VivoX/ui/: UIManager.cpp  UIManager.h  UIManagerInterface.h
VivoX/ui/config/: ConfigCheckBox.qml  ConfigColorPicker.qml  ConfigComboBox.qml  ConfigLabel.qml  ConfigTextArea.qml  ConfigTextField.qml  WidgetConfigDialog.qml
VivoX/ui/panels/: Panel.qml  PanelContainer.qml  PanelInterface.h  PanelManager.cpp  PanelManager.h  PanelSystem.qml  Sidebar.qml
VivoX/ui/panels/widgets/: SidebarWidget.qml  WindowGroup.qml
VivoX/ui/qml/: main.qml
VivoX/ui/qml/animations/: AnimationManager.qml
VivoX/ui/qml/atoms/: VxBadge.qml  VxButton.qml  VxCard.qml  VxCheckBox.qml  VxIcon.qml  VxLabel.qml  VxProgressBar.qml  VxRadioButton.qml  VxSeparator.qml  VxSlider.qml  VxSwitch.qml  VxTextField.qml  VxTheme.qml  VxTooltip.qml
VivoX/ui/qml/molecules/: VxComboBox.qml  VxDialog.qml  VxFileItem.qml  VxFormField.qml  VxNotification.qml  VxPopupMenu.qml  VxSearchField.qml  VxTabBar.qml  VxTabButton.qml
VivoX/ui/qml/theme/: Theme.qml  ThemeManager.cpp  ThemeManager.h  ThemeManager.qml
VivoX/ui/qml/theme/themes/: dark.json  light.json
VivoX/ui/qml/views/: SpeedDial.qml
VivoX/ui/widgets/: BaseWidget.qml  CalendarWidget.qml  ClockWidget.qml  ContextMenu.qml  ControlToggle.qml  DashboardGrid.qml  DesktopWidget.qml  LaunchApplicationAction.qml  LauncherWidget.qml  OpenFileAction.qml  Sidebar.qml  StandardWidget.qml  SystemCommandAction.qml  SystemTrayWidget.qml  TaskbarWidget.qml  ToggleWidgetAction.qml  WidgetInterface.h  WidgetManager.cpp  WidgetManager.h  WidgetRegistry.cpp  WidgetRegistry.h  WidgetSystem.qml
VivoX/window_manager/layouts/: LayoutEngine.cpp  LayoutEngine.h
VivoX/window_manager/stage/: StageManager.cpp  StageManager.h
VivoX/window_manager/tabbing/: TabManager.cpp  TabManager.h
VivoX/window_manager/windows/: WindowManager.cpp  WindowManager.h  WindowManagerInterface.h
VivoX/window_manager/workspaces/: Workspace.cpp  Workspace.h  WorkspaceManager.cpp  WorkspaceManager.h
(+1 files in other folders)
